<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTeammatesActivity"
        android:id="@+id/add_teammates_activity_id"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="343dp"
                android:layout_height="680dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/cardColor"
                app:cardCornerRadius="12dp"
                android:layout_gravity="center"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="657dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="307dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="307dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/add_teammates_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                app:srcCompat="@drawable/add_teammates_icon" />

                            <ImageView
                                android:id="@+id/x_button_close"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="210dp"
                                android:layout_marginTop="10dp"
                                app:srcCompat="@drawable/x_button_close" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/choose_teammates_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/lora"
                            android:text="@string/add_teammates_text"
                            android:textColor="@color/textColor"
                            android:textFontWeight="700"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="308dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/teammate_1"
                            android:textColor="@color/textColor" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_01_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/teammate_2"
                            android:textColor="@color/textColor" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_02_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/teammate_3"
                            android:textColor="@color/textColor" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_03_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/teammate_4"
                            android:textColor="@color/textColor" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_04_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:fontFamily="@font/poppins"
                            android:text="@string/teammate_5"
                            android:textColor="@color/textColor" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_05_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/confirm_button"
                            android:layout_width="311dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="@color/button_color"
                            android:fontFamily="@font/poppins"
                            android:text="@string/confirm_button_text"
                            android:textColor="@color/buttonTextColor"
                            android:textSize="12sp"
                            app:cornerRadius="8dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/cancel_button"
                            android:layout_width="311dp"
                            android:layout_height="48dp"
                            android:backgroundTint="@color/white"
                            android:fontFamily="@font/poppins"
                            android:text="@string/cancel_button_text"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:cornerRadius="8dp" />
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </ScrollView>

        <TextView
            android:id="@+id/userLoggedInStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
