<resources>
    <string name="app_name">Dodged_Project</string>
    <string name="welcome_to_dodged">Dodged.</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="choose_teammates_text">Choose Teammates</string>
    <string name="choose_teammates_description_text">Press the <b>add teammate</b> button to individually add party members or use the <b>upload photo</b> feature to load from a lobby screen grab</string>
    <string name="add_teammate">Add Teammate</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="add_teammates_text"><b>Add Teammates</b></string>
    <string name="teammate_1">#01</string>
    <string name="teammate_2">#02</string>
    <string name="teammate_3">#03</string>
    <string name="teammate_4">#04</string>
    <string name="teammate_5">#05</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="process_image_text">Process Image?</string>
    <string name="process_image_description_text">This image will be used to process team usernames</string>
    <string name="results_dodge">Dodge!</string>
    <string name="low_odds_of_winning_text">low odds of winning</string>
    <string name="results_play">Play!</string>
    <string name="high_odds_of_winning_text">high odds of winning</string>
    <string name="player_profile_title">Player Profile</string>
    <string name="player_profile_username">username_01_*</string>
    <string name="stats_kills">0.162</string>
    <string name="stats_deaths">0.152</string>
    <string name="stats_assists">0.02</string>
    <string name="stats_gold">154</string>
    <string name="stats_vision">08</string>
    <string name="stats_kills_title">kills / min</string>
    <string name="stats_deaths_title">deaths / min</string>
    <string name="stats_assists_title">assists / min</string>
    <string name="stats_gold_title">gold / min</string>
    <string name="stats_vision_title">vision</string>
    <string name="comment_box_placeholder_text">Leave a comment..</string>
    <string name="add_comment_button">Add Comment</string>
    <string name="comment_row_username">username</string>
    <string name="comment_row_date">date</string>
    <string name="comment_row_comment">comment comment comment</string>
    <string name="comment_leave_a_comment">Leave a comment..</string>
    <string name="champ_dropdown_string">Select Champion</string>
    <string name="champ_exp_button_string">CHECK EXP</string>
    <string name="exp_level">EXP LEVEL</string>
    <string name="mastery_points">MASTERY POINTS</string>
    <string name="top_played_champs">Top Played Champions</string>
    <string name="login_to_comment">Please login to comment on the player\'s profile</string>
    <string name="dark_mode_toggle_text">Switch Theme</string>
    <string name="enter_riot_id_heading">Please enter your RIOT ID</string>
    <string name="riot_id_label">RIOT ID</string>
    <string name="riot_id_info">This RIOT ID will be use throughout the app and allows for more player interactivity</string>
    <string name="riot_id_caution">MUST ENTER A RIOT ID TO PROCEED</string>
</resources>