...
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/champion_dropdown_menu"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:clipToPadding="true"
...
                        app:boxStrokeColor="#613CEA"
                        app:boxStrokeWidthFocused="1dp"
                        app:endIconMode="dropdown_menu"
                        app:hintTextColor="@color/textColor">

                        <AutoCompleteTextView
                            android:id="@+id/champion_dropdown_item"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:gravity="top"
                            android:includeFontPadding="false"
                            android:inputType="none"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/champion_exp_button"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="#613CEA"
...
